src/main/java/semantic/abstractSintaxTree/test/failing/missingReturn.ru
/? MissingReturnException
struct A {}
impl A{
    .(){}

    fn notVoid() -> Int{
        Int a,b;
        (IO.out_int(a));
    }
}

start{}